--- a/.env.example
+++ b/.env.example
@@ -17,11 +17,10 @@ STRIPE_WEBHOOK_SECRET=""
 PAYPAL_CLIENT_ID=""
 PAYPAL_CLIENT_SECRET=""
 
-# Email
-SMTP_HOST=""
-SMTP_PORT=""
-SMTP_USER=""
-SMTP_PASSWORD=""
+# Email (Resend)
+RESEND_API_KEY=""
+EMAIL_FROM="Yaming <noreply@yaming.cl>"
+ADMIN_EMAIL="carlos.irigoyen@gmail.com"
 
 # Cloudinary
 CLOUDINARY_CLOUD_NAME=""
