--- a/package.json
+++ b/package.json
@@ -37,9 +37,12 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-hot-toast": "^2.6.0",
+    "resend": "^6.1.3",
     "sharp": "^0.33.5",
     "sonner": "^1.7.3",
     "tailwind-merge": "^2.6.0",
+    "transbank-sdk": "^6.1.0",
     "zod": "^3.24.1",
     "zustand": "^5.0.2"
   },
