docs: Agregar .env.example con variables de entorno necesarias
- Documenta todas las variables de entorno requeridas
- Incluye comentarios con enlaces para obtener las credenciales
- Seguro para subir al repositorio (sin valores reales)

--- a/.env.example
+++ b/.env.example
@@ -1,32 +1,18 @@
 # Database
-DATABASE_URL="postgresql://user:password@localhost:5432/yaming"
+DATABASE_URL="postgresql://user:password@localhost:5432/yaming?schema=public"
 
 # NextAuth
-NEXTAUTH_URL="http://localhost:3000"
-NEXTAUTH_SECRET="your-secret-here"
-
-# OAuth Providers
-GOOGLE_CLIENT_ID=""
-GOOGLE_CLIENT_SECRET=""
-
-# Payment Gateways
-STRIPE_SECRET_KEY=""
-STRIPE_PUBLISHABLE_KEY=""
-STRIPE_WEBHOOK_SECRET=""
-
-PAYPAL_CLIENT_ID=""
-PAYPAL_CLIENT_SECRET=""
+NEXTAUTH_SECRET="your-secret-key-change-in-production"
+NEXTAUTH_URL="http://localhost:3001"
 
 # Email (Resend)
-RESEND_API_KEY=""
+# Obtén tu API key en: https://resend.com/api-keys
+RESEND_API_KEY="re_your_api_key_here"
 EMAIL_FROM="Yaming <noreply@yaming.cl>"
 ADMIN_EMAIL="carlos.irigoyen@gmail.com"
 
-# Cloudinary
-CLOUDINARY_CLOUD_NAME=""
-CLOUDINARY_API_KEY=""
-CLOUDINARY_API_SECRET=""
-
-# Analytics
-NEXT_PUBLIC_GA_ID=""
-
+# Transbank (Webpay) - Sandbox
+# Obtén tus credenciales en: https://www.transbankdevelopers.cl/
+WEBPAY_COMMERCE_CODE="597055555532"
+WEBPAY_API_KEY="your_api_key_here"
+WEBPAY_ENVIRONMENT="INTEGRACION" # INTEGRACION o PRODUCCION
